# rust-file-explorer

./: README.md  index.html  package-lock.json  package.json
src/: App.tsx  index.css  ipc.ts  types.ts  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: errors.rs  main.rs  search.rs  state.rs
src-tauri/src/filesystem/: cache.rs  explorer.rs  fs_event_handlers.rs  fs_utils.rs  mod.rs  volume.rs
src/components/: FolderNavigation.tsx  InputModal.tsx  InputModalManager.tsx  LoadingPlaceholder.tsx  PathBar.tsx  ShortcutsHelpDialog.tsx
src/components/ContextMenu/: ContextMenu.tsx  ContextMenuManager.tsx  EntityContextMenu.tsx  MainContextMenu.tsx
src/components/MainBody/: DirectoryContents.tsx  DirectoryEntity.tsx
src/components/TopBar/: SearchBar.tsx  SearchFilter.tsx
src/components/Volumes/: VolumeComponent.tsx  VolumeList.tsx
src/components/ui/: Button.tsx  Input.tsx
src/hooks/: useClipboard.ts  useContextMenu.ts  useFileActions.ts  useKeyboardShortcuts.ts
src/store/: store.ts
src/store/slices/: clipboardSlice.ts  contextMenuSlice.ts  currentDirectorySlice.ts  modalSlice.ts  navigationSlice.ts  volumesSlice.ts
src/ui/: Input.tsx
