[package]
name = "rust-file-explorer"
version = "0.1.0"
description = "A fast file explorer which made using rust which utilizes caching for improved performance "
authors = ["Vidit Agrawal", "Bhushan Patil", "Durgesh Nikam","Mayur Ghodke"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
